# pydglib

./: .gitignore  README.md  pyproject.toml  requirements.txt
pydglib/: boundary_type.py  element.py  grid.py  mesh.py  odeint.py  operators.py
pydglib/pde/: advec1d.py  advec2d.py  burgers1d.py  maxwell2d.py
pydglib/utils/: geometry.py  nodes.py  polynomials.py  transformations.py
tests/: test_element.py  test_grid.py  test_mesh.py  test_odeint.py  test_operators.py
tests/data/: Dr_1d_degree_10.npy  Dr_2d_degree_10.npy  Ds_2d_degree_10.npy  LIFT_1d_degree_10.npy  LIFT_2d_degree_10.npy  LIFT_2d_degree_2.npy  V_1d_degree_10.npy  V_2d_degree_10.npy  Vr_1d_degree_10.npy  Vr_2d_degree_10.npy  Vs_2d_degree_10.npy  __init__.py  maxwell2d_Ez_t1.npy  maxwell2d_Hx_t1.npy  maxwell2d_Hy_t1.npy
tests/pde/: test_advec1d.py  test_advec2d.py  test_burgers1d.py  test_maxwell2d.py
tests/utils/: test_geometry.py  test_nodes.py  test_polynomials.py  test_transformations.py
