[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydglib"
version = "0.0.1"
authors = [
  { name="Andrew Gray", email="andrew.gray@queensu.ca" },
]
description = "Discontinuous Galerkin methods in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["pydglib"] # Prevents "Multiple top-level packages discovered in a flat-layout" error

[project.urls]
"Homepage" = "https://github.com/16acdg/pydglib"